[package]
name = "veloren-world"
version = "0.10.0"
edition.workspace = true
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]

[lints]
workspace = true

[features]
use-dyn-lib = ["common-dynlib"]
be-dyn-lib = []
simd = ["vek/platform_intrinsics"]
bin_compression = [
    "lz-fear",
    "deflate",
    "flate2",
    "image/jpeg",
    "num-traits",
    "fallible-iterator",
    "rstar",
    "cli",
]
cli = ["clap", "signal-hook", "indicatif"]
# Enable this feature to export images containing maps of airship routes during
# world generation. This will be useful for evaluating airship route generation
# during world seed selection. Some world maps and airship docking site placements
# will be better suited for airship routing than others.
# See file world/src/civ/airship_travel.rs for map generation details.
airship_maps = ["dep:tiny-skia"]

default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = "../common" }
common_base = { package = "veloren-common-base", path = "../common/base" }
common-net = { package = "veloren-common-net", path = "../common/net" }
common-dynlib = { package = "veloren-common-dynlib", path = "../common/dynlib", optional = true }

bincode = { workspace = true }
bitvec = "1.0.1"
enum-map = { workspace = true }
enumset = "1.1.3"
fxhash = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
vek = { workspace = true }
noise = { workspace = true }
num = { workspace = true }
ordered-float = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
arr_macro = "0.2.1"
rayon = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
# inline_tweak = { workspace = true, features = ["derive"] }
kiddo = { workspace = true }
fixed = "1"
strum = { workspace = true }
delaunator = "1.0.2"
tiny-skia = { version = "0.11.4", optional = true }

# compression benchmarks
lz-fear = { version = "0.2", optional = true }
deflate = { version = "1.0.0", optional = true }
flate2 = { version = "1.0.20", optional = true }
num-traits = { workspace = true, optional = true }
fallible-iterator = { version = "0.3.0", optional = true }
rstar = { version = "0.12", optional = true }
clap = { workspace = true, optional = true }
signal-hook = { version = "0.3.6", optional = true }
indicatif = { version = "0.18", optional = true }


[dev-dependencies]
common-frontend = { package = "veloren-common-frontend", path = "../common/frontend" }
criterion = { workspace = true }
csv = "1.1.3"
tracing-subscriber = { version = "0.3.7", default-features = false, features = [
    "fmt",
    "time",
    "ansi",
    "smallvec",
    "env-filter",
] }
minifb = "0.28"
rusqlite = { workspace = true }
svg_fmt = "0.4"

[[bench]]
harness = false
name = "tree"

[[bench]]
harness = false
name = "cave"

[[example]]
name = "chunk_compression_benchmarks"
required-features = ["bin_compression"]

[[example]]
name = "world_generate_time"

[[example]]
name = "world_block_statistics"
required-features = ["bin_compression"]

[[example]]
name = "heightmap_visualization"
required-features = ["bin_compression"]

[[example]]
name = "batch_generate"
required-features = ["cli"]
