[package]
authors = ["juliancoffee <lightdarkdaughter@gmail.com>"]
edition = "2021"
name = "veloren-client-i18n"
description = "Optional crate for internalization and diagnostic of existing localizations for frontends to consume"
version = "0.13.0"

[dependencies]
# Assets
common = {package = "veloren-common", path = "../../common"}
common-assets = {package = "veloren-common-assets", path = "../../common/assets"}
ron = { workspace = true }
serde = { workspace = true }
# Localization
unic-langid = { version = "0.9"}
intl-memoizer = { git = "https://github.com/juliancoffee/fluent-rs.git", branch = "patched"}
fluent = { git = "https://github.com/juliancoffee/fluent-rs.git", branch = "patched"}
fluent-bundle = { git = "https://github.com/juliancoffee/fluent-rs.git", branch = "patched"}
# Utility
hashbrown = { workspace = true }
deunicode = "1.0"
tracing = { workspace = true }
# Bin
clap = { workspace = true, optional = true }
fluent-syntax = { git = "https://github.com/juliancoffee/fluent-rs.git", branch = "patched"}

[[bin]]
name = "i18n-check"
required-features = ["bin"]

[[bin]]
name = "i18n-csv"
required-features = ["stat"]

[features]
bin = ["clap"]
stat = []
