[package]
authors = ["juliancoffee <lightdarkdaughter@gmail.com>"]
edition = "2021"
name = "veloren-client-i18n"
description = "Optional crate for internalization and diagnostic of existing localizations for frontends to consume"
version = "0.13.0"

[lints]
workspace = true

[dependencies]
# Assets
common-assets = {package = "veloren-common-assets", path = "../../common/assets"}
common-i18n = { package = "veloren-common-i18n", path = "../../common/i18n" }
serde = { workspace = true }
# Localization
unic-langid = { version = "0.9"}
intl-memoizer = "0.5"
fluent = "0.17"
fluent-bundle = "0.16"
# Utility
hashbrown = { workspace = true }
tracing = { workspace = true }
# Bin
clap = { workspace = true, optional = true }
fluent-syntax = "0.12"

[[bin]]
name = "i18n_check"
required-features = ["bin"]

[[bin]]
name = "i18n_csv"
required-features = ["stat"]

[features]
bin = ["clap"]
stat = []
