[package]
authors = ["juliancoffee <lightdarkdaughter@gmail.com>", "Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"
name = "veloren-common-assets"
description = "Crate for game loading assets for veloren."
version = "0.10.0"

[dependencies]
lazy_static = "1.4.0"
assets_manager = {version = "0.9", features = ["bincode", "ron", "json"]}
ron = { version = "0.8", default-features = false }
dot_vox = "5.1"
wavefront = "0.2" # TODO: Use vertex-colors branch when we have models that have them
image = { version = "0.24", default-features = false, features = ["png"] }
tracing = "0.1"

# asset tweak
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
walkdir = "2.3.2"

[features]
hot-reloading = ["assets_manager/hot-reloading"]
asset_tweak = ["serde", "hot-reloading"]
