[package]
name = "veloren-common-dynlib"
version.workspace = true
edition.workspace = true
authors = ["Ben Wallis <atomyc@gmail.com>"]

[lints]
workspace = true

[dependencies]
find_folder = {version = "0.3.0"}
libloading = {version = "0.9"}
notify = {version = "8.0.0"}
tracing = { workspace = true }
