[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>", "Imbris <imbrisf@gmail.com>"]
edition = "2021"
name = "veloren-common-frontend"
description = "common stuff that is used by server-cli and voxygen directly"
version = "0.10.0"

[features]
tracy = ["common-base/tracy", "tracing-tracy"]

[dependencies]
common-base = { package = "veloren-common-base", path = "../base" }

# Logging
termcolor = "1.1"
tracing = { workspace = true }
tracing-appender = "0.2.0"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.3.7", default-features = false, features = ["env-filter", "fmt", "time", "ansi", "smallvec", "tracing-log"]}

# Tracy
# NOTE: This must be kept in sync with the `profiling` version in `common/base`.
# NOTE: `=` since the minor version of tracing-tracy bumped a major version of `tracy-client`
tracing-tracy = { version = "=0.10.2", optional = true }
