[package]
name = "veloren-common-i18n"
version = "0.1.0"
description = "Crate for structs and methods that acknowledge the need for localization of the game"
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["rc"] }
hashbrown = { workspace = true }
rand = { workspace = true }
