[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"
name = "veloren-common-net"
version = "0.10.0"

[features]
simd = ["vek/platform_intrinsics"]

default = ["simd"]

[dependencies]
common = {package = "veloren-common", path = "../../common"}
#inline_tweak = "1.0.2"

bincode = "1.3.3"
flate2 = "1.0.20"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
num-traits = "0.2"
sum_type = "0.2.0"
vek = { version = "0.15.8", features = ["serde"] }
tracing = { version = "0.1", default-features = false }

# Data structures
hashbrown = { version = "0.12", features = ["rayon", "serde", "nightly"] }

# ECS
specs = { version = "0.18", features = ["serde", "storage-event-control"] }

# Serde
serde = { version = "1.0.110", features = ["derive"] }
