[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"
name = "veloren-common-state"
version = "0.10.0"

[features]
simd = ["vek/platform_intrinsics"]
plugins = ["toml", "tar", "wasmer", "bincode", "plugin-api", "serde"]

default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = ".." }
common-net = { package = "veloren-common-net", path = "../net" }
common-ecs = { package = "veloren-common-ecs", path = "../ecs" }
common-base = { package = "veloren-common-base", path = "../base" }

rayon = "1.5"
num_cpus = "1.0"
tracing = { version = "0.1", default-features = false }
vek = { version = "0.15.8", features = ["serde"] }

# Data structures
hashbrown = { version = "0.12", features = ["rayon", "serde", "nightly"] }

# ECS
specs = { version = "0.18", features = ["serde", "storage-event-control", "derive"] }

# Plugins
scopeguard = "1.1.0"
serde = { version = "1.0.110", features = ["derive"], optional = true }
toml = { version = "0.5.7", optional = true }
tar = { version = "0.4.37", optional = true }
wasmer = { version = "2.0.0", optional = true, default-features = false, features = ["wat", "default-cranelift", "default-universal"] }
bincode = { version = "1.3.1", optional = true }
plugin-api = { package = "veloren-plugin-api", path = "../../plugin/api", optional = true }
timer-queue = "0.1.0"

# Tweak running code
#inline_tweak = { version = "1.0.8", features = ["release_tweak"] }
