[package]
name = "veloren-common-state"
version.workspace = true
edition.workspace = true
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]

[lints]
workspace = true

[features]
simd = ["vek/platform_intrinsics"]
plugins = ["common-assets/plugins", "toml", "wasmtime", "wasmtime-wasi", "tokio", "tar", "bincode", "serde", "dep:sha2", "dep:hex", "dep:atomic_refcell"]

default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = ".." }
common-net = { package = "veloren-common-net", path = "../net" }
common-ecs = { package = "veloren-common-ecs", path = "../ecs" }
common-base = { package = "veloren-common-base", path = "../base" }
common-assets = { package = "veloren-common-assets", path = "../assets", optional = true}

rayon = { workspace = true }
num_cpus = "1.0"
tracing = { workspace = true }
vek = { workspace = true }

# Data structures
hashbrown = { workspace = true }

# ECS
specs = { workspace = true, features = ["serde", "storage-event-control", "derive"] }

# Plugins
atomic_refcell = { workspace = true, optional = true }
scopeguard = "1.1.0"
serde = { workspace = true, optional = true }
toml = { version = "0.9", optional = true }
tar = { version = "0.4.37", optional = true }
bincode = { workspace = true, optional = true }
timer-queue = "0.1.0"
wasmtime = { version = "39", optional = true , features = ["component-model", "async"] }
wasmtime-wasi = { version = "39", optional = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true }
futures = "0.3.30"
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

# Tweak running code
#inline_tweak = { version = "1.0.8", features = ["release_tweak"] }
