[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2018"
name = "veloren-common-sys"
version = "0.8.0"

[features]
tracy = ["tracy-client"]
simd = ["vek/platform_intrinsics"]
plugins = ["toml", "tar", "wasmer", "bincode", "plugin-api"]

default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = ".." }
common-net = { package = "veloren-common-net", path = "../net" }

rand = "0.8"
rayon = "1.5"
tracing = { version = "0.1", default-features = false }
vek = { version = "=0.14.1", features = ["serde"] }

# Data structures
hashbrown = { version = "0.9", features = ["rayon", "serde", "nightly"] }
indexmap = "1.3.0"
slab = "0.4.2"

# ECS
specs = { git = "https://github.com/amethyst/specs.git", features = ["serde", "storage-event-control", "derive"], rev = "d4435bdf496cf322c74886ca09dd8795984919b4" }

# Serde
serde = { version = "1.0.110", features = ["derive"] }

# Tracy
tracy-client = { version = "0.10.0", optional = true }

# Plugins
scopeguard = "1.1.0"
toml = { version = "0.5.7", optional = true }
tar = { version = "0.4.30", optional = true }
wasmer = { version = "1.0.0", optional = true, default-features = false, features = ["wat", "default-cranelift", "default-jit"] }
bincode = { version = "1.3.1", optional = true }
plugin-api = { package = "veloren-plugin-api", path = "../../plugin/api", optional = true }
