[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2018"
name = "veloren-common-sys"
version = "0.9.0"

[features]
tracy = ["common/tracy"]
simd = ["vek/platform_intrinsics"]

default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = ".." }
common-net = { package = "veloren-common-net", path = "../net" }
common-ecs = { package = "veloren-common-ecs", path = "../ecs" }
common-base = { package = "veloren-common-base", path = "../base" }

rand = "0.8"
rayon = "1.5"
tracing = { version = "0.1", default-features = false }
vek = { version = "=0.14.1", features = ["serde"] }
ordered-float = { version = "2.0.1", default-features = false }

# Data structures
hashbrown = { version = "0.9", features = ["rayon", "serde", "nightly"] }
indexmap = "1.3.0"
slab = "0.4.2"

# ECS
specs = { git = "https://github.com/amethyst/specs.git", features = ["serde", "storage-event-control", "derive"], rev = "5a9b71035007be0e3574f35184acac1cd4530496" }

# Tweak running code
# inline_tweak = { version = "1.0.8", features = ["release_tweak"] }
