[package]
name = "nova-forge-common-systems"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
simd = ["vek/platform_intrinsics"]
plugins = ["common-state/plugins"]

default = ["simd"]

[dependencies]
common = { package = "nova-forge-common", path = ".." }
common-net = { package = "nova-forge-common-net", path = "../net" }
common-ecs = { package = "nova-forge-common-ecs", path = "../ecs" }
common-base = { package = "nova-forge-common-base", path = "../base" }
common-state = { package = "nova-forge-common-state", path = "../state" }

rand = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
vek = { workspace = true }
ordered-float = { workspace = true }
itertools = { workspace = true }

# ECS
specs = { workspace = true, features = [
    "serde",
    "storage-event-control",
    "derive",
] }

# Tweak running code
# inline_tweak = { workspace = true, features = ["release_tweak"] }

[dev-dependencies]
# Setup a State
common-state = { package = "nova-forge-common-state", path = "../state" }
