[package]
name = "veloren-auth-provisioner"
version = "0.1.0"
edition = "2021"

[dependencies]
authc = { git = "https://gitlab.com/veloren/auth.git", rev = "ae0e16783a9f9041951296885f082308e155db79" }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
