[package]
name = "veloren-network-protocol"
description = "pure Protocol without any I/O itself"
version = "0.6.1"
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
metrics = ["prometheus"]
trace_pedantic = [] # use for debug only

default = ["metrics"]

[dependencies]

#tracing and metrics
tracing = { workspace = true }
prometheus = { workspace = true, optional = true }
#stream flags
bitflags = { workspace = true }
rand = { workspace = true }
# async traits
async-trait = "0.1.42"
bytes = "^1"
hashbrown = { workspace = true }

[dev-dependencies]
async-channel = "2.1"
tokio = { workspace = true, features = ["macros"] }
criterion = { version = "0.5.1", default-features=false, features=["rayon", "cargo_bench_support", "async_tokio"]}

[[bench]]
name = "protocols"
harness = false
