[package]
name = "veloren-network-protocol"
version = "0.6.1"
description = "pure Protocol without any I/O itself"
edition.workspace = true
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]

[lints]
workspace = true

[features]
metrics = ["prometheus"]
trace_pedantic = [] # use for debug only

default = ["metrics"]

[dependencies]

#tracing and metrics
tracing = { workspace = true }
prometheus = { workspace = true, optional = true }
#stream flags
bitflags = { workspace = true }
rand = { workspace = true }
# async traits
async-trait = { workspace = true }
bytes = "^1"
hashbrown = { workspace = true }

[dev-dependencies]
async-channel = "2.1"
tokio = { workspace = true, features = ["macros"] }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "protocols"
harness = false
